Include css for card size and ncct-info icon information

--- a/ncct/site/our-center/institutes.html
+++ b/ncct/site/our-center/institutes.html
@@ -65,9 +65,11 @@
                                 <p class="bs4-text-right bs4-font-italic">Dr. Sven Nahnsen</p>
 
                                 <p class="bs4-font-weight-bold">Contact Persons:</p>
-                                <a href="mailto:marie.gauder@qbic.uni-tuebingen.de">Marie Gauder, </a>
+                                <a href="mailto:stefan.czemmel@qbic.uni-tuebingen.de">Stefan
+                                    Czemmel, </a>
 
-                                <p>Coordinator and Bioinformatics Research Scientist</p>
+                                <p>Head of Project Management and Bioinformatic Scientist</p>
+                            </div>
                             </div>
                         </div>
                     </div>
