Adapt spacing and fix linkage on our center page

--- a/ncct/site/our-center/institutes.html
+++ b/ncct/site/our-center/institutes.html
@@ -8,23 +8,25 @@
             <div class="bs4-card bs4-p-3 bg-ncct">
                 <div class="bs4-card-deck">
                     <div class="bs4-card"><img class="bs4-img-thumbnail bs4-img-fluid"
-                            src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/52096/csm_portrait_olaf_riess_sd_56a65f1bcd.jpg/7b4a0c5a-92e4-4844-861a-fd1eb156db00?t=1583168195776" />
+                                               src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/38618/Olaf+Riess+Portrait.jpg/8360e72d-16ee-43d3-998a-c3c615eda51c?t=1585825395000"/>
                         <div class="bs4-card-body bs4-text-left">
                             <div class="bs4-card-title bs4-text-center bs4-h5"><a
-                                    href="http://www.medgen-tuebingen.de/#langsel" target="_blank">Institute of Medical
-                                    Genetics and Applied Genomics </a></div>
+                                href="http://www.medgen-tuebingen.de/#langsel" target="_blank">Institute
+                                of Medical Genetics and Applied Genomics</a></div>
 
                             <div class="bs4-card-text">
-                                <p class="bs4-text-right bs4-font-italic">Prof. Olaf Riess, coordinator</p>
+                                <p class="bs4-text-right bs4-font-italic">Prof. Olaf Riess,
+                                    coordinator</p>
 
                                 <p class="bs4-font-weight-bold">Contact Persons:</p>
 
-                                <p><a href="mailto:Nicolas.Casadei@med.uni-tuebingen.de">Dr. Nicolas Casadei,</a></p>
+                                <p><a href="mailto:Nicolas.Casadei@med.uni-tuebingen.de">Dr. Nicolas
+                                    Casadei,</a></p>
 
                                 <p>Head of the Core Facility</p>
 
-                                <p><a href="mailto:stephan.ossowski@med.uni-tuebingen.de">Prof. Stephan Ossowski,</a>
-                                </p>
+                                <p><a href="mailto:stephan.ossowski@med.uni-tuebingen.de">Prof.
+                                    Stephan Ossowski,</a></p>
 
                                 <p>Head of Computational Genomics</p>
                             </div>
@@ -32,19 +34,22 @@
                     </div>
 
                     <div class="bs4-card"><img class="bs4-img-thumbnail bs4-img-fluid"
-                            src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/52096/Silke+Peter+Portrait/3bfaa906-2e7a-4696-80f7-52f4c42f1a00?t=1625480710818" />
+                                               src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/38618/Silke+Peter+Portrait/e382ae58-b633-4251-b50f-da3c28cb9f3c?t=1625481141496"/>
                         <div class="bs4-card-body bs4-text-left">
                             <div class="bs4-card-title bs4-text-center bs4-h5"><a
-                                    href="https://www.medizin.uni-tuebingen.de/de/das-klinikum/einrichtungen/institute/med-mikrobiologie-und-hygiene"
-                                    target="_blank">Institute of Medical Microbiology and Hygiene</a></div>
+                                href="https://www.medizin.uni-tuebingen.de/de/das-klinikum/einrichtungen/institute/med-mikrobiologie-und-hygiene"
+                                target="_blank">Institute of Medical Microbiology and Hygiene</a>
+                            </div>
 
                             <div class="bs4-card-text">
-                                <p class="bs4-text-right bs4-font-italic ">Apl. Prof. Silke Peter</p>
+                                <p class="bs4-text-right bs4-font-italic ">Apl. Prof. Silke
+                                    Peter</p>
 
                                 <p class="bs4-font-weight-bold">Contact Persons:</p>
-                                <a href="mailto:silke.peter@med.uni-tuebingen.de">Apl. Prof. Silke Peter</a>
+                                <a href="mailto:silke.peter@med.uni-tuebingen.de">Apl. Prof. Silke
+                                    Peter,</a>
 
-                                <p>Coordinator and Research Scientist</p>
+                                <p>Clinical Microbiology</p>
                                 <a href="mailto:Janina.Geißert@med.uni-tuebingen.de">Dr. Janina Geißert</a>
 
                                 <p>Project Manager and Research Scientist</p>
@@ -53,11 +58,12 @@
                     </div>
 
                     <div class="bs4-card"><img class="bs4-img-thumbnail bs4-img-fluid"
-                            src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/52096/UNI_TUE_+QBIC_4719_FINAL_PRINT_RGB.jpg/2d98a90e-7e9d-43e8-8388-ae41a8014dc8?t=1583168195944" />
+                                               src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/38618/Sven+Nahnsen+Portrait.jpg/aae86abb-fbf6-4e08-9d0f-bce4eaffa398?t=1585825395000"/>
                         <div class="bs4-card-body bs4-text-left">
-                            <div class="bs4-card-title bs4-text-center bs4-h5 bs4-mb-md-1"><a _blank=""
-                                    href="https://uni-tuebingen.de/en/facilities/zentrale-einrichtungen/quantitative-biology-center-qbic.html"
-                                    target="_blank">Quantitative Biology Center (QBiC)</a></div>
+                            <div class="bs4-card-title bs4-text-center bs4-h5 bs4-mb-md-1"><a
+                                _blank=""
+                                href="https://uni-tuebingen.de/en/facilities/zentrale-einrichtungen/quantitative-biology-center-qbic.html"
+                                target="_blank">Quantitative Biology Center (QBiC)</a></div>
 
                             <div class="bs4-h5">&nbsp;</div>
 
@@ -69,7 +75,6 @@
                                     Czemmel, </a>
 
                                 <p>Head of Project Management and Bioinformatic Scientist</p>
-                            </div>
                             </div>
                         </div>
                     </div>
