Adapt Job description of SC

--- a/ncct/site/our-center/institutes.html
+++ b/ncct/site/our-center/institutes.html
@@ -74,7 +74,7 @@
                                 <a href="mailto:stefan.czemmel@qbic.uni-tuebingen.de">Stefan
                                     Czemmel, </a>
 
-                                <p>Head of Project Management and Bioinformatic Scientist</p>
+                                <p>Team Leader Project Management & Bioinfomatics Support</p>
                             </div>
                         </div>
                     </div>
