--- a/ncct/site/our-center/vision.html
+++ b/ncct/site/our-center/vision.html
@@ -11,7 +11,7 @@
                 strengthening the use of <strong>high-throughput sequencing</strong> methods in Germany.<br />
                 <br />
                 The center offers <strong>automated</strong> high-throughput services and a rich portfolio of sequencing
-                solutions using the latest <strong>Illumina</strong> and <strong>Oxford Nanopore Technologies</strong>
+                solutions using the latest <strong>Illumina</strong>, <strong>Pacific Biosciences (PACBIO)</strong>and <strong>Oxford Nanopore Technologies (ONT)</strong>
                 sequencers. As part of the <a href="http://qbic.life" target="_blank">Quantitative Biology Center</a>
                 (QBiC), NCCT builds on established core facility structures and integrates with the existing
                 infrastructure for data management and bioinformatics support.</div>
