Update Documentation to current state

--- a/ncct/site/downloads/submission-documents.html
+++ b/ncct/site/downloads/submission-documents.html
@@ -1,9 +1,11 @@
-<section id="submission-documents">
+<section id="downloads-project-submission">
     <div class="bs4-container">
         <div class="bs4-row">
             <div class="bs4-col-8 bs4-offset-2">
                 <div class="section-title">
-                    <div class="bs4-h1">Project Submission Documents</div>
+                    <div class="bs4-h1 bs4-text-center">Project Submission Documents</div>
+
+                    <p class="bs4-h3 bs4-text-center bs4-mt-5">This section provides Individual documents containing information and requirements for the project submission process</p>
                 </div>
             </div>
         </div>
@@ -13,14 +15,12 @@
         <div class="bs4-row">
             <div class="bs4-col-8 bs4-offset-2">
                 <ul class="bs4-list-group">
-                    <li class="bs4-list-group-item"><a
-                            href="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/38996/Declaration+of+Intent.pdf/c59a813b-178d-4d97-a3cc-0f0936ea4679"
-                            target="_blank">Declaration of Intent (DFG)</a></li>
-                    <li class="bs4-list-group-item"><a
-                            href="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/38996/Proposal+Project+Recommendations.pdf/4aa71de8-083d-49fb-afd4-835c6e7d8fb9"
-                            target="_blank">Proposal Preparation Instructions (DFG)</a></li>
-                    <li class="bs4-list-group-item"><a href="https://github.com/qbicsoftware/metadata-doc"
-                            target="_blank">Project Sample Sheet</a></li>
+                    <li class="bs4-list-group-item bs4-list-group-item-primary bg-ncct bs4-text-white">
+                        <h4>Project Specific Information</h4>
+                    </li>
+                    <li class="bs4-list-group-item"><a href="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/38996/Declaration+of+Intent.pdf/c59a813b-178d-4d97-a3cc-0f0936ea4679" target="_blank">Declaration of Intent (DFG)</a></li>
+                    <li class="bs4-list-group-item"><a href="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/38996/Proposal+Project+Recommendations.pdf/4aa71de8-083d-49fb-afd4-835c6e7d8fb9" target="_blank">Proposal Preparation Instructions (DFG)</a></li>
+                    <li class="bs4-list-group-item"><a href="https://github.com/qbicsoftware/metadata-doc" target="_blank">Project Sample Sheet</a></li>
                 </ul>
             </div>
         </div>
