--- a/ncct/site/start-project/project-questions.html
+++ b/ncct/site/start-project/project-questions.html
@@ -9,6 +9,7 @@
             <li class="bs4-list-group-item">How many samples do you have?</li>
             <li class="bs4-list-group-item">How many replicates are planned?</li>
             <li class="bs4-list-group-item">What is your sample type? (e.g. library, DNA/RNA, blood, stool,...)</li>
+            <li class="bs4-list-group-item">Are your samples GMO, do they present a biosafety risk?</li>
             <li class="bs4-list-group-item">Which species are you working on? (e.g. human, mouse etc)</li>
             <li class="bs4-list-group-item">Is bioinformatics analysis needed? If yes, to what degree?</li>
         </ul>
@@ -24,4 +25,3 @@
         </div>
         </div>
         </section>
-        
