--- a/ncct/site/our-center/ncct-contact.html
+++ b/ncct/site/our-center/ncct-contact.html
@@ -1,7 +1,7 @@
 <section id="ncct-contact">
     <div class="bs4-container-fluid">
         <div class="bs4-col-8 bs4-offset-2">
-            <div class="section-title">
+            <div class="section-title"
                 <div class="bs4-text-center bs4-h1">We'd love to hear from you!</div>
             </div>
 
@@ -13,8 +13,14 @@
                         <div class="bs4-card-textbox bs4-mt-3">
                             <div class="bs4-card-title bs4-h4">Address</div>
 
-                            <p class="bs4-card-text bs4-h6">NGS Competence Center Tübingen<br />
+                            <p class="bs4-card-text bs4-h6"><a href="https://goo.gl/maps/J37UrVYNgUCZUtz76" target="_blank">Institute of Medical Genetics and Applied Genomics</a><br />
                                 Calwerstraße 7, 72076 Tübingen.</p>
+
+                            <p class="bs4-card-text bs4-h6"><a href="https://goo.gl/maps/5sHjmTi29TWH4GR68" target="_blank">Institute of Medical Microbiology and Hygiene</a><br />
+                                Elfriede-Aulhorn-Straße 6, 72076 Tübingen.</p>
+
+                            <p class="bs4-card-text bs4-h6"><a href="https://goo.gl/maps/ze2EdqoMxER4obx86" target="_blank">Quantitative Biology Center</a><br />
+                                Auf der Morgenstelle 10, 72076 Tübingen.</p>
                         </div>
                     </div>
                 </div>
