--- a/ncct/site/resources/resources-mandatory-information.html
+++ b/ncct/site/resources/resources-mandatory-information.html
@@ -15,10 +15,10 @@
       </div>
 
       <div class="bs4-card bs4-border-0">
-        <div class="bs4-card-body"><a href="https://github.com/qbicsoftware/metadata-doc/raw/master/NGS_Metadata_Sheet_1-7-3.xlsx"><img alt="Metadata Sheet" class="img-top bs4-img-fluid bs4-img-thumbnail bs4-w-25" src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/67603/FileIcon.png/74c134aa-21a4-408c-86c2-b91afc7c8698?t=1674231383554" /> </a>
+        <div class="bs4-card-body"><a href="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/71284/NCCT_NGS_Metadata_Sheet_1-7-4.xlsx/7cbdcae6-49f7-4d04-aa08-2abb0a882f8f"><img alt="Metadata Sheet" class="img-top bs4-img-fluid bs4-img-thumbnail bs4-w-25" src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/67603/FileIcon.png/74c134aa-21a4-408c-86c2-b91afc7c8698?t=1674231383554" /> </a>
 
           <div class="bs4-card-textbox bs4-mt-3">
-            <div class="bs4-card-title bs4-h4"><a href="https://github.com/qbicsoftware/metadata-doc/raw/master/NGS_Metadata_Sheet_1-7-3.xlsx" target="_blank">Metadata Sheet</a></div>
+            <div class="bs4-card-title bs4-h4"><a href="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/71284/NCCT_NGS_Metadata_Sheet_1-7-4.xlsx/7cbdcae6-49f7-4d04-aa08-2abb0a882f8f" target="_blank">Metadata Sheet</a></div>
           </div>
         </div>
       </div>
