Update contact persons

--- a/ncct/site/our-center/institutes.html
+++ b/ncct/site/our-center/institutes.html
@@ -46,11 +46,10 @@
                                     Peter</p>
 
                                 <p class="bs4-font-weight-bold">Contact Persons:</p>
-                                <a href="mailto:silke.peter@med.uni-tuebingen.de">Apl. Prof. Silke
-                                    Peter,</a>
+                                <a href="mailto:janina.vogt@med.uni-tuebingen.de">Dr. Janina Vogt</a>
 
-                                <p>Clinical Microbiology</p>
-                                <a href="mailto:Janina.Geißert@med.uni-tuebingen.de">Dr. Janina Geißert</a>
+                                <p>Project Manager and Research Scientist</p>
+                                <a href="mailto:Janina.Geissert@med.uni-tuebingen.de">Dr. Janina Geißert-Janek</a>
 
                                 <p>Project Manager and Research Scientist</p>
                             </div>
